Add ids to slideshow

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div id="slideshow">
 		<div class="slides">
 		<ul>  
-                    <li>  
+                    <li id="slide-one">  
                         <h2>Slide one</h2>  
                         <p>  
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.   
@@ -23,7 +23,7 @@
                             sit amet, venenatis et, dui.  
                         </p>  
                     </li>  
-                    <li>  
+                    <li id="slide-two">  
                         <h2>Slide two</h2>  
                         <p>  
                             Nam ac nibh sit amet augue ultricies sagittis. Donec sit   
@@ -33,7 +33,7 @@
                             nascetur ridiculus mus.  
                         </p>  
                     </li>     
-                    <li>  
+                    <li id="slide-three">  
                         <h2>Slide three</h2>  
                         <p>  
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.   
