Test github tracking

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="slides">  
                 <ul>  
                     <li id="slide-one">  
-                        <h2>Slide one</h2>  
+                        <h2>Welcome</h2>  
                         <p>  
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.   
                             Donec pretium arcu non velit. Phasellus adipiscing auctor   
@@ -24,7 +24,7 @@
                         </p>  
                     </li>  
                     <li id="slide-two">  
-                        <h2>Slide two</h2>  
+                        <h2>Test</h2>  
                         <p>  
                             Nam ac nibh sit amet augue ultricies sagittis. Donec sit   
                             amet nunc. Vivamus lacinia, nisi ac tincidunt commodo, purus   
