--- a/index.html
+++ b/index.html
@@ -7,48 +7,42 @@
 
 <body>
 
-<h1>Jannie Tan</h1>
+<h1>Code Jannie</h1>
 
 <div id="main">
 	<div id="slideshow">  
+             <ul class="slides-nav">  
+                <li><a href="#about">About</a></li>  
+                <li><a href="#projects">Projects</a></li>  
+                <li><a href="#resources">Resources</a></li>  
+                <li><a href="#contact">Contact</a></li>  
+             </ul>  
             <div class="slides">  
                 <ul>  
-                    <li id="slide-one">  
-                        <h2>Welcome</h2>  
-                        <p>  
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.   
-                            Donec pretium arcu non velit. Phasellus adipiscing auctor   
-                            lorem. Curabitur in urna ut purus consequat sollicitudin.   
-                            Phasellus ut diam. Cras magna libero, tempor id, venenatis   
-                            sit amet, venenatis et, dui.  
-                        </p>  
+                    <li id="about">  
+                        <h2>About</h2>  
+                        <p>Welcome to my corner of the Internet!</p>  
+			<p>My name is Jannie Tan and I am a software engineer, dessert enthusiast, strategy games fan, continuous learner. Raised in Hawaii but a terrible swimmer. In case of zombie invasion, I would be the slowest zombie and would die of starvation, which would serve me right as a good zombie is a dead zombie.</p>
+			<p>Want to see what I've been up to? Click the <a href="#projects">Projects</a> tab to find out.</p>
+			<p>Want to talk? Here's my <a href="#contact">contact info</a>.
                     </li>  
-                    <li id="slide-two">  
-                        <h2>Test</h2>  
+                    <li id="projects">  
+                        <h2>Some Projects</h2>  
+                        <p><a href="/tic-tac-toe">Tic-tac-toe Robot</a></p>  
+                    </li>
+		    <li id="resources">  
+                        <h2>Resources/h2>  
+                        <p>A list of awesome links</p>  
+                    </li>
+                    <li id="contact">  
+                        <h2>Contact Info</h2>  
                         <p>  
-                            Nam ac nibh sit amet augue ultricies sagittis. Donec sit   
-                            amet nunc. Vivamus lacinia, nisi ac tincidunt commodo, purus   
-                            nisi condimentum urna, sit amet molestie odio dolor non lectus.   
-                            Cum sociis natoque penatibus et magnis dis parturient montes,   
-                            nascetur ridiculus mus.  
-                        </p>  
-                    </li>     
-                    <li id="slide-three">  
-                        <h2>Slide three</h2>  
-                        <p>  
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.   
-                            Suspendisse adipiscing dui a nibh. Integer tristique lorem   
-                            vitae massa. Etiam dapibus, eros sit amet euismod semper,   
-                            felis erat congue lacus, sed aliquam metus libero sed elit.  
+			    <span class="email">Email:jannie.y.tan [at] gmail.com</span>
+                            <span class="linkedin"><a href="www.linkedin.com/in/jannietan/">LinkedIn</a><span>
                         </p>  
                     </li>                  
                 </ul>  
             </div>  
-            <ul class="slides-nav">  
-                <li><a href="#slide-one">Slide one</a></li>  
-                <li><a href="#slide-two">Slide two</a></li>  
-                <li><a href="#slide-three">Slide three</a></li>  
-            </ul>  
         </div>  
 </div>
 </body>
