Redo theme of site

--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
 </head>
 
 <body>
-
-<h1>Code Jannie</h1>
-
+<div id="header">
+<div id="header-wrapper">
+<span id="logo"><a href="index.html">Code Jannie</a></span>
+  <ul id="nav">  
+    <li><a href="#about">About</a></li>  
+    <li><a href="#projects">Projects</a></li>  
+    <li><a href="#resources">Resources</a></li>  
+    <li><a href="#contact">Contact</a></li>  
+  </ul> 
+</div>
+</div>
 <div id="main">
+<div id="main-wrapper">
 	<div id="slideshow">  
-             <ul class="slides-nav">  
-                <li><a href="#about">About</a></li>  
-                <li><a href="#projects">Projects</a></li>  
-                <li><a href="#resources">Resources</a></li>  
-                <li><a href="#contact">Contact</a></li>  
-             </ul>  
             <div class="slides">  
                 <ul>  
                     <li id="about">  
@@ -31,7 +34,7 @@
                         <p><a href="tic-tac-toe.html">Tic-tac-toe Robot</a></p>  
                     </li>
 		    <li id="resources">  
-                        <h2>Resources/h2>  
+                        <h2>Resources</h2>  
                         <p>A list of awesome links</p>  
                     </li>
                     <li id="contact">  
@@ -44,6 +47,7 @@
                 </ul>  
             </div>  
         </div>  
+</div>
 </div>
 </body>
 
