--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -1,3 +1,37 @@
 <html>
+
+<head>
+<title>Tic-tac-toe Robot</title>
+<link href="style.css" media="screen" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+<div id="header">
+<div id="header-wrapper">
+<span id="logo"><a href="index.html">Code Jannie</a></span>
+  <ul id="nav">  
+    <li><a href="index.html#about">About</a></li>  
+    <li><a href="index.html#projects">Projects</a></li>  
+    <li><a href="index.html#resources">Resources</a></li>  
+    <li><a href="index.html#contact">Contact</a></li>  
+  </ul> 
+</div>
+</div>
+
+<div id="main">
+<div id="main-wrapper">
 <h2>Tic-tac-toe Robot</h2>
+<div id="game-board"> 
+<span class="pos row-0 col-0 pos-0-0">x</span>
+<span class="pos row-0 col-1 pos-0-1">o</span>
+<span class="pos row-0 col-2 pos-0-2"></span>
+<span class="pos row-1 col-0 pos-1-0"></span>
+<span class="pos row-1 col-1 pos-1-1"></span>
+<span class="pos row-1 col-2 pos-1-2"></span>
+<span class="pos row-2 col-0 pos-2-0"></span>
+<span class="pos row-2 col-1 pos-2-1"></span>
+<span class="pos row-2 col-2 pos-2-2"></span>
+</div>
+</div>
+</div>
 </html>
