Update styles for tic-tac-toe page

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -20,10 +20,11 @@
 
 <div id="main">
 <div id="main-wrapper">
-<h2>Tic-tac-toe Robot</h2>
+<div id="game-title"><h2>Tic-tac-toe Robot</h2></div>
+<div id="game-robot"></div>
 <div id="game-board"> 
-<span class="pos row-0 col-0 pos-0-0">x</span>
-<span class="pos row-0 col-1 pos-0-1">o</span>
+<span class="pos row-0 col-0 ai pos-0-0">x</span>
+<span class="pos row-0 col-1 player pos-0-1">o</span>
 <span class="pos row-0 col-2 pos-0-2"></span>
 <span class="pos row-1 col-0 pos-1-0"></span>
 <span class="pos row-1 col-1 pos-1-1"></span>
