--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -25,7 +25,26 @@
 					<button onClick="playerFirst()">Move First</button>
 					<button onClick="aiFirst()">Move Second</button>
 				</div>
-				<div id="game-robot"></div>
+				<div id="game-robot">
+					<div id="robot-message">Hello victim #3428293. Care for a game of tic-tac-toe?</div>
+					<div id="robot">
+						<div id="robot-head">
+							<span class="eye"></span>
+							<span class="eye"></span>
+							<span class="mouth"></span>
+						</div>
+						<div id="robot-body">
+							<span id="arm-1" class="robot-arm arm-down"></span>
+							<span id="robot-record-wrapper">
+								<span id="robot-records" class="robot-stats">Game Stats</span>
+								<span class="robot-stats">Wins: <span id="win-num"></span></span>
+								<span class="robot-stats">Ties: <span id="tie-num"></span></span>
+								<span class="robot-stats">Losses: <span id="loss-num">0</span></span>
+							</span>
+							<span id="arm-2" class="robot-arm arm-down"></span>
+						</div>
+					</div>
+				</div>
 				<div id="game-board"> 
 					<span id="pos-0" class="pos row-0 col-0" onclick="playerTurn(this)"></span>
 					<span id="pos-1" class="pos row-0 col-1" onclick="playerTurn(this)"></span>
