Add base 0 html to links

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -37,8 +37,8 @@
 							<span id="arm-1" class="robot-arm arm-down"></span>
 							<span id="robot-record-wrapper">
 								<span id="robot-records" class="robot-stats">Game Stats</span>
-								<span class="robot-stats">Wins: <span id="win-num"></span></span>
-								<span class="robot-stats">Ties: <span id="tie-num"></span></span>
+								<span class="robot-stats">Wins: <span id="win-num">0</span></span>
+								<span class="robot-stats">Ties: <span id="tie-num">0</span></span>
 								<span class="robot-stats">Losses: <span id="loss-num">0</span></span>
 							</span>
 							<span id="arm-2" class="robot-arm arm-down"></span>
