Update html with coming soon message

--- a/index.html
+++ b/index.html
@@ -35,14 +35,12 @@
                     </li>
 		    <li id="resources">  
                         <h2>Resources</h2>  
-                        <p>A list of awesome links</p>  
+                        <p>Coming soon!</p>  
                     </li>
                     <li id="contact">  
                         <h2>Contact Info</h2>  
-                        <p>  
-			    <span class="email">Email:jannie.y.tan [at] gmail.com</span>
-                            <span class="linkedin"><a href="www.linkedin.com/in/jannietan/">LinkedIn</a><span>
-                        </p>  
+                        <p><span class="email">Email:jannie.y.tan [at] gmail.com</span></p> 
+			    							<p><span class="linkedin"><a href="www.linkedin.com/in/jannietan/">LinkedIn</a><span></p>
                     </li>                  
                 </ul>  
             </div>  
