Interim css checkin

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 <div id="header">
 <div id="header-wrapper">
-<span id="logo"><a href="index.html">Code Jannie</a></span>
+<span id="logo"><a href="index.html">[Code Jannie]</a></span>
+<p>Jannie Tan</p>
+<p>Contact: <span class="linkedin"><a href="https://www.linkedin.com/in/jannietan/">LinkedIn</a><span></p> 
   <ul id="nav">  
     <li><a href="#about">About</a></li>  
     <li><a href="#projects">Projects</a></li>  
@@ -36,12 +38,7 @@
 		    <li id="resources">  
                         <h2>Resources</h2>  
                         <p>Coming soon!</p>  
-                    </li>
-                    <li id="contact">  
-                        <h2>Contact Info</h2>  
-                        <p><span class="email">Email:jannie.y.tan [at] gmail.com</span></p> 
-			    							<p><span class="linkedin"><a href="www.linkedin.com/in/jannietan/">LinkedIn</a><span></p>
-                    </li>                  
+                    </li>            
                 </ul>  
             </div>  
         </div>  
