interim style check in

--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
 <body>
 <div id="header">
 <div id="header-wrapper">
-<span id="logo"><a href="index.html">[Code Jannie]</a></span>
-<p>Jannie Tan</p>
+<p><a href="index.html">[Code Jannie]</a> Jannie Tan</p>
 <p>Contact: <span class="linkedin"><a href="https://www.linkedin.com/in/jannietan/">LinkedIn</a><span></p> 
   <ul id="nav">  
     <li><a href="#about">About</a></li>  
     <li><a href="#projects">Projects</a></li>  
-    <li><a href="#resources">Resources</a></li>  
-    <li><a href="#contact">Contact</a></li>  
+    <li><a href="#resources">Resources</a></li>
   </ul> 
 </div>
 </div>
@@ -25,18 +23,12 @@
             <div class="slides">  
                 <ul>  
                     <li id="about">  
-                        <h2>About</h2>  
-                        <p>Welcome to my corner of the Internet!</p>  
-			<p>My name is Jannie Tan and I am a software engineer, dessert enthusiast, strategy games fan, continuous learner. Raised in Hawaii but a terrible swimmer. In case of zombie invasion, I would be the slowest zombie and would die of starvation, which would serve me right as a good zombie is a dead zombie.</p>
-			<p>Want to see what I've been up to? Click the <a href="#projects">Projects</a> tab to find out.</p>
-			<p>Want to talk? Here's my <a href="#contact">contact info</a>.
+                        <p>Welcome to my corner of the Internet!</p>
                     </li>  
-                    <li id="projects">  
-                        <h2>Some Projects</h2>  
+                    <li id="projects">
                         <p><a href="tic-tac-toe.html">Tic-tac-toe Robot</a></p>  
                     </li>
-		    <li id="resources">  
-                        <h2>Resources</h2>  
+		    <li id="resources">
                         <p>Coming soon!</p>  
                     </li>            
                 </ul>  
