--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
 <div id="header">
 <div id="header-wrapper">
-<p><a href="index.html">[Code Jannie]</a> Jannie Tan</p>
-<p>Contact: <span class="linkedin"><a href="https://www.linkedin.com/in/jannietan/">LinkedIn</a><span></p> 
+<p><a href="index.html">[Code Jannie]</a></p>
+<p> Jannie Tan</p>
+<p>Contact &amp; Work History: <span class="linkedin"><a href="https://www.linkedin.com/in/jannietan/">LinkedIn</a><span></p> 
   <ul id="nav">  
     <li><a href="#about">About</a></li>  
     <li><a href="#projects">Projects</a></li>  
@@ -22,13 +23,17 @@
 	<div id="slideshow">  
             <div class="slides">  
                 <ul>  
-                    <li id="about">  
+                    <li id="about">
                         <p>Welcome to my corner of the Internet!</p>
-                    </li>  
-                    <li id="projects">
-                        <p><a href="tic-tac-toe.html">Tic-tac-toe Robot</a></p>  
+                        <p>I'm Jannie and am a full-stack software engineer. My full bio and contact information are on <a href="https://www.linkedin.com/in/jannietan/">LinkedIn</a>. I'm looking forward to hearing from you!</p>
+                        <p>Available on this site is a selection of my personal projects and resources that I hope you find useful. Enjoy!</p>
                     </li>
-		    <li id="resources">
+                    <li id="projects">
+                        <p>Some of my personal projects:</p>
+                        <p><a href="tic-tac-toe.html">Tic-tac-toe Robot</a></p>
+                        <p>Play Tic-tac-toe against a robot with an atttitude in this simple javascript game.</p>
+                    </li>
+                    <li id="resources">
                         <p>Coming soon!</p>  
                     </li>            
                 </ul>  
