--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -6,16 +6,18 @@
 	</head>
 
 	<body>
-		<div id="header-wrapper">
-		<p><a href="index.html">[Code Jannie]</a></p>
-		<p> Jannie Tan</p>
-		<p>Contact &amp; Work History: <span class="linkedin"><a href="https://www.linkedin.com/in/jannietan/">LinkedIn</a><span></p> 
-		  <ul id="nav">  
-		    <li><a href="#about">About</a></li>  
-		    <li><a href="#projects">Projects</a></li>  
-		    <li><a href="#resources">Resources</a></li>
-		  </ul> 
-		</div>
+        <div id="header">
+            <div id="header-wrapper">
+            <p><a href="index.html">[Code Jannie]</a></p>
+            <p> Jannie Tan</p>
+            <p>Contact &amp; Work History: <span class="linkedin"><a href="https://www.linkedin.com/in/jannietan/">LinkedIn</a><span></p> 
+              <ul id="nav">  
+                <li><a href="#about">About</a></li>  
+                <li><a href="#projects">Projects</a></li>  
+                <li><a href="#resources">Resources</a></li>
+              </ul> 
+            </div>
+        </div>
 		<div id="main">
 			<div id="main-wrapper">
 				<div id="game-title">
