Fix links in header

--- a/index.html
+++ b/index.html
@@ -1,46 +1,44 @@
 <html>
+    <head>
+        <title>Code Jannie</title>
+        <link href="style.css" media="screen" rel="stylesheet" type="text/css" />
+    </head>
 
-<head>
-<title>Code Jannie</title>
-<link href="style.css" media="screen" rel="stylesheet" type="text/css" />
-</head>
-
-<body>
-<div id="header">
-<div id="header-wrapper">
-<p><a href="index.html">[Code Jannie]</a></p>
-<p> Jannie Tan</p>
-<p>Contact &amp; Work History: <span class="linkedin"><a href="https://www.linkedin.com/in/jannietan/">LinkedIn</a><span></p> 
-  <ul id="nav">  
-    <li><a href="#about">About</a></li>  
-    <li><a href="#projects">Projects</a></li>  
-    <li><a href="#resources">Resources</a></li>
-  </ul> 
-</div>
-</div>
-<div id="main">
-<div id="main-wrapper">
-	<div id="slideshow">  
-            <div class="slides">  
-                <ul>  
-                    <li id="about">
-                        <p>Welcome to my corner of the Internet!</p>
-                        <p>I'm Jannie and am a full-stack software engineer. My full bio and contact information are on <a href="https://www.linkedin.com/in/jannietan/">LinkedIn</a>. I'm looking forward to hearing from you!</p>
-                        <p>Available on this site is a selection of my personal projects and resources that I hope you find useful. Enjoy!</p>
-                    </li>
-                    <li id="projects">
-                        <p>Some of my personal projects:</p>
-                        <p><a href="tic-tac-toe.html">Tic-tac-toe Robot</a></p>
-                        <p>Play Tic-tac-toe against a robot with an atttitude in this simple javascript game.</p>
-                    </li>
-                    <li id="resources">
-                        <p>Coming soon!</p>  
-                    </li>            
-                </ul>  
+    <body>
+        <div id="header">
+            <div id="header-wrapper">
+            <p><a href="index.html">[Code Jannie]</a></p>
+            <p> Jannie Tan</p>
+            <p>Contact &amp; Work History: <span class="linkedin"><a href="https://www.linkedin.com/in/jannietan/">LinkedIn</a><span></p> 
+              <ul id="nav">  
+                <li><a href="/index.html#about">About</a></li>  
+                <li><a href="/index.html#projects">Projects</a></li>  
+                <li><a href="/index.html#resources">Resources</a></li>
+              </ul> 
+            </div>
+        </div>
+    <div id="main">
+    <div id="main-wrapper">
+    	<div id="slideshow">  
+                <div class="slides">  
+                    <ul>  
+                        <li id="about">
+                            <p>Welcome to my corner of the Internet!</p>
+                            <p>I'm Jannie and am a full-stack software engineer. My full bio and contact information are on <a href="https://www.linkedin.com/in/jannietan/">LinkedIn</a>. I'm looking forward to hearing from you!</p>
+                            <p>Available on this site is a selection of my personal projects and resources that I hope you find useful. Enjoy!</p>
+                        </li>
+                        <li id="projects">
+                            <p>Some of my personal projects:</p>
+                            <p><a href="tic-tac-toe.html">Tic-tac-toe Robot</a></p>
+                            <p>Play Tic-tac-toe against a robot with an atttitude in this simple javascript game.</p>
+                        </li>
+                        <li id="resources">
+                            <p>Coming soon!</p>  
+                        </li>            
+                    </ul>  
+                </div>  
             </div>  
-        </div>  
-</div>
-</div>
-</body>
-
+    </div>
+    </div>
+    </body>
 </html>
