--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -12,9 +12,9 @@
             <p> Jannie Tan</p>
             <p>Contact &amp; Work History: <span class="linkedin"><a href="https://www.linkedin.com/in/jannietan/">LinkedIn</a><span></p> 
               <ul id="nav">  
-                <li><a href="#about">About</a></li>  
-                <li><a href="#projects">Projects</a></li>  
-                <li><a href="#resources">Resources</a></li>
+                <li><a href="/index.html#about">About</a></li>  
+                <li><a href="/index.html#projects">Projects</a></li>  
+                <li><a href="/index.html#resources">Resources</a></li>
               </ul> 
             </div>
         </div>
